Avoid primitive wrapper constructors